helmfile-and-kustomize/assets/manifests/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    env: beta
  name: to-dev-beta
  namespace: test
spec:
  egress:
  - ports:
    - port: 5672
      protocol: TCP
    to:
    - ipBlock:
        cidr: 192.168.1.1/32
    - ipBlock:
        cidr: 192.168.1.2/32
  podSelector:
    matchLabels:
      env: beta
      networkpolicy/to-dev: allow
  policyTypes:
  - Egress
